# DataJockey

./: EDA Effnet Genres.ipynb  EDA Part 1.ipynb  EDA Style Classification.ipynb  Makefile  Processor.ipynb  Procfile  README.md  drop_cols.pkl  model_api.py  music_etl_pipeline.py  processor.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
Notebooks/: EDA Effnet Genres.ipynb  EDA Part 1.ipynb  EDA Style Classification.ipynb  Notebook Directory.md  Processor.ipynb  README.md  Rekord Box XML Data Cleaning and Munging draft.ipynb  Rekord Box XML Data Cleaning and Munging.ipynb  Scenario Querying.ipynb  Song Similarity and Recommender.ipynb  Unsupervised Learning - Dimensionality Reduction.ipynb
dashboard/: 1_Homepage.py
onnx_models/: approachability_2c-effnet_discogs-1.onnx  danceability-msd-musicnn-1.onnx  deam-musicnn-msd-2.onnx  emomusic-musicnn-msd-2.onnx  engagement_2c-effnet_discogs-1.onnx  genre_electronic-effnet-discogs-1.onnx  mood_acoustic-effnet-discogs-1.onnx  mood_acoustic-msd-musicnn-1.onnx  mood_aggressive-msd-musicnn-1.onnx  mood_happy-msd-musicnn-1.onnx  mood_party-effnet-discogs-1.onnx  mood_party-msd-musicnn-1.onnx  mood_relaxed-msd-musicnn-1.onnx  mood_sad-msd-musicnn-1.onnx  msd-musicnn-1.onnx  mtg_jamendo_genre-effnet-discogs-1.onnx  mtg_jamendo_moodtheme-effnet-discogs-1.onnx  mtg_jamendo_top50tags-effnet-discogs-1.onnx  muse-musicnn-msd-2.onnx  timbre-effnet-discogs-1.onnx
project_tools/: __init__.py  data_processing.py  llm.py  models.py  settings.yaml  tonal_keys_dict.json  utils.py
tests/: test_utils.py
(+34 files in other folders)
