# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = project_tools
version          = attr: project_tools.__version__
author           = George McIntire
author_email     = geo.mcintire@gmail.com
description      = A Python library to aide in the DJ Data Science project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, project
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
